# RSLibreCell - a FreeCell implementation
# Copyright (C) 2025 and later: tristhaus
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "rslibrecell"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dirs = "6.0.0"
mockall = "0.13.1"
rand = "0.9.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
